# AbstractSyntaxTree

./: .gitignore  CMakeLists.txt
include/: AST.h  ASTNode.h  ASTNodeTreeViewer.h  ASTParser.h  ASTSimplifier.h  ASTSimplifierSimplifyRules.h  Irrational.h  Operation.h  Operator.h  Parenthesis.h  Rational.h  Symbol.h
include/DataTypes/: Irrational.h  Operator.h  Parenthesis.h  Rational.h  Symbol.h
include/Operations/: AdditionOperation.h
src/: AST.cpp  ASTNode.cpp  ASTNodeTreeViewer.cpp  ASTParser.cpp  ASTSimplifier.cpp  CMakeLists.txt  Irrational.cpp  Operator.cpp  Parenthesis.cpp  Rational.cpp  Symbol.cpp
src/DataTypes/: Irrational.cpp  Operator.cpp  Parenthesis.cpp  Rational.cpp  Symbol.cpp
src/OperationSimplifyRules/: Addition.cpp  SimplifyRulesAddition.cpp  SimplifyRulesMultiplication.cpp  SimplifyRulesSubtraction.cpp  SimplifyRulesUnaryPlus.cpp
tests/: CMakeLists.txt  Test.cpp
